# zipa

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  icefall_container.def  k2-1.24.4.dev20250926+cpu.torch2.2.2-cp312-cp312-macosx_15_0_universal2.whl  pyproject.toml  zipa_ctc_inference.py  zipa_transducer_inference.py
ipa_simplified/: bpe.model  ipa_chart.txt  phone_set.txt  tokens.jsonl  unigram_127.vocab
scripts/: __init__.py  allosaurus_eval.py  evaluate.py  filter_dataset.py  generate_training_data.py  whisper_eval.py  xlsr_eval.py
zipformer/: ctc_decode.py  decode.py  decode_train_data.py  encoder_interface.py  train.py  zipformer.py
zipformer_crctc/: __init__.py  asr_datamodule.py  beam_search.py  ctc_decode.py  ctc_decode_train_data.py  decode.py  expnet_ctc.py  model.py  spec_augment.py  train.py  utils.py  zipformer.py
zipformer_transducer/: __init__.py  asr_datamodule.py  streaming_decode.py
