[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipa"
version = "1.0.0"
description = "Zero-shot IPA (International Phonetic Alphabet) transcription models"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ZIPA Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.12"
dependencies = [
    "torchaudio>=2.2.0",
    "k2 @ https://github.com/zcstarr/zipa/raw/refs/heads/main/k2-1.24.4.dev20250926+cpu.torch2.2.2-cp312-cp312-macosx_15_0_universal2.whl",
    "kaldifeat @ https://huggingface.co/csukuangfj/kaldifeat/resolve/main/macos/kaldifeat-1.25.4.dev20240329+cpu.torch2.2.2-cp312-cp312-macosx_12_0_universal2.whl",
    "sentencepiece>=0.1.97",
    "soundfile>=0.12.1",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zipa"
Repository = "https://github.com/yourusername/zipa"
Issues = "https://github.com/yourusername/zipa/issues"

[tool.setuptools.packages.find]
include = ["zipa*"]
